--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ wgpu = "27.0.1"
 winit = "0.30.12"
 gilrs = "0.11.0"
 
+# Image decoding
+image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "avif"] }
+
 [lib]
 crate-type = ["cdylib"]
 path = "src/lib.rs"
