feat: Implement window command interfaces and events
- Added window command types for creating, closing, and managing window properties (title, position, size, state, icon, decorations, resizability, focus, and cursor).
- Introduced event types for window lifecycle, including creation, resizing, moving, closing, destruction, focus changes, and theme changes.
- Created common types for input elements, vectors, sizes, colors, and matrices to standardize event data structures.
- Established gamepad event types for button and axis interactions, including connection and disconnection events.
- Defined keyboard event types for input handling, modifiers, and IME (Input Method Editor) events.
- Developed pointer event types for mouse and touch interactions, including movement, button presses, scrolling, and gestures.
- Reorganized event exports into a centralized index file for better modularity and accessibility.
- Updated core engine functions to utilize new command and event types for improved type safety and clarity.

--- a/binding/bun/package.json
+++ b/binding/bun/package.json
@@ -31,7 +31,9 @@
     "pub": "npm publish --access=public --tag=latest",
     "format": "prettier --write ."
   },
-  "dependencies": {},
+  "dependencies": {
+    "cbor2": "^2.0.1"
+  },
   "devDependencies": {
     "@types/bun": "^1.3.3",
     "prettier": "^3.7.3",
