feat: Implement window management commands and events
- Added common types for window state, cursor modes, and user attention.
- Created command interfaces for window lifecycle, properties, decorations, focus, and cursor management.
- Defined result types for window commands, including creation, closure, state management, and cursor settings.
- Established event types for window actions, keyboard inputs, pointer interactions, and gamepad events.
- Introduced a development script to initialize and manage multiple windows with event handling.
- Implemented NAPI bindings for engine initialization, command sending, and buffer management.
- Added TypeScript definitions and configuration for improved type safety and development experience.

--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.0.1",
   "main": "index.node",
   "types": "index.d.ts",
-  "napi": {
-    "name": "vulfram-core"
-  },
   "scripts": {
     "build:ffi": "cargo build --release --features ffi --no-default-features",
-    "build:napi": "napi build --release -d binding/napi",
+    "build:napi": "napi build --release -o binding/napi --no-dts",
     "artifacts": "napi artifacts",
     "prepublishOnly": "napi prepublish -t npm"
   },
   "devDependencies": {
     "@napi-rs/cli": "^3.5.0"
+  },
+  "napi": {
+    "binaryName": "vulfram-core"
   }
 }
