feat: Refactor N-API bindings and update paths for core module

--- a/binding/tsconfig.json
+++ b/binding/tsconfig.json
@@ -6,8 +6,8 @@
   ],
   "include": [
     "src/**/*.ts",
-    "napi/**/*.ts",
-    "napi/**/*.node",
+    "src/napi/**/*.ts",
+    "src/napi/**/*.node",
   ],
   "compilerOptions": {
     // Environment setup & latest features
