feat: Replace CBOR with MessagePack for serialization, update related dependencies and enums

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prepublishOnly": "napi prepublish -t npm"
   },
   "devDependencies": {
-    "@napi-rs/cli": "^3.5.0"
+    "@napi-rs/cli": "^3.5.0",
+    "@types/bun": "^1.3.3"
   },
   "napi": {
     "binaryName": "vulfram-core"
