--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,6 @@ notifica = "3.0"
 once_cell = "1.21"
 pollster = "0.4"
 serde = { version = "1.0", features = ["derive"] }
-serde_cbor = "0.11"
 serde_repr = "0.1"
 wgpu = "27.0"
 winit = "0.30"
@@ -22,6 +21,7 @@ image = { version = "0.25", default-features = false, features = ["png", "jpeg",
 # N-API dependencies (optional)
 napi = { version = "3.6", optional = true }
 napi-derive = { version = "3.4", optional = true }
+rmp-serde = "1.3.0"
 
 [build-dependencies]
 napi-build = "2.3.1"
