--- a/binding/package.json
+++ b/binding/package.json
@@ -32,7 +32,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "cbor2": "^2.0.1"
+    "msgpackr": "^1.11.5"
   },
   "devDependencies": {
     "@types/bun": "^1.3.3",
