feat: Add event system and core engine functionality
- Introduced enums for Vulfram results in enums.ts.
- Created common event types in common.ts for input handling.
- Implemented gamepad event types in gamepad.ts, including button and axis events.
- Added keyboard event types in keyboard.ts, covering key input and modifiers.
- Developed pointer event types in pointer.ts for mouse and touch interactions.
- Established system event types in system.ts for application state changes.
- Created window event types in window.ts for window management.
- Re-exported all event types in index.ts for easier access.
- Implemented core engine functions in napi, including initialization, disposal, and event handling.
- Enhanced queue management in Rust core to serialize event data efficiently.
- Added benchmark tracking for engine function calls to monitor performance.
- Updated TypeScript configuration for better module handling and type definitions.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "types": "index.d.ts",
   "scripts": {
     "build:ffi": "cargo build --release --features ffi --no-default-features",
-    "build:napi": "napi build --release -o binding/src/napi",
+    "build:napi": "napi build --release -o bind/ts/src/napi",
     "artifacts": "napi artifacts",
     "prepublishOnly": "napi prepublish -t npm"
   },
