--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ once_cell = "1.21"
 pollster = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_repr = "0.1"
+rmp-serde = "1.3.0"
 wgpu = "27.0"
 winit = "0.30"
 gilrs = "0.11"
@@ -21,7 +22,8 @@ image = { version = "0.25", default-features = false, features = ["png", "jpeg",
 # N-API dependencies (optional)
 napi = { version = "3.6", optional = true }
 napi-derive = { version = "3.4", optional = true }
-rmp-serde = "1.3.0"
+mlua = { version = "0.11.5", features = ["lua54", "module"], optional = true }
+pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
 
 [build-dependencies]
 napi-build = "2.3.1"
@@ -34,6 +36,8 @@ path = "src/lib.rs"
 default = ["napi"]  # Default to N-API export
 ffi = []  # C ABI / FFI export
 napi = ["dep:napi", "dep:napi-derive"]  # N-API export
+mlua = ["dep:mlua"]
+pyo3 = ["dep:pyo3"]
 
 [profile.dev]
 opt-level = 0
