--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,27 +4,35 @@ version = "0.0.1"
 edition = "2024"
 
 [dependencies]
+# Helpers
 env_logger = "0.11"
 log = "0.4"
-notifica = "3.0"
-once_cell = "1.21"
 pollster = "0.4"
+once_cell = "1.21"
+
+# Serialization & Data Structures
 serde = { version = "1.0", features = ["derive"] }
 serde_repr = "0.1"
 rmp-serde = "1.3.0"
+bytemuck = "1.24.0"
+glam = { version = "0.30.9", features = ["serde", "bytemuck"] }
+
+# Graphics & Windowing
 wgpu = "27.0"
 winit = "0.30"
 gilrs = "0.11"
 
+# Notifications
+notifica = "3.0"
+
 # Image decoding
 image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "avif"] }
 
-# N-API dependencies (optional)
+# Binding dependencies (optional)
 napi = { version = "3.6", optional = true }
 napi-derive = { version = "3.4", optional = true }
 mlua = { version = "0.11.5", features = ["lua54", "module"], optional = true }
 pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
-glam = { version = "0.30.9", features = ["serde"] }
 
 [build-dependencies]
 napi-build = "2.3.1"
