--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "main": "index.node",
   "types": "index.d.ts",
   "scripts": {
-    "build:ffi": "cargo build --release --features ffi --no-default-features",
-    "build:napi": "cargo build --release",
-    "build:lua": "cargo build --release --features lua --no-default-features",
-    "build:python": "cargo build --release --features python --no-default-features",
-    "debug:ffi": "cargo build --features ffi --no-default-features",
-    "debug:napi": "cargo build",
-    "debug:lua": "cargo build --features lua --no-default-features",
-    "debug:python": "cargo build --features python --no-default-features"
+    "check": "cd core && cargo check",
+    "fmt": "cd core && cargo fmt",
+    "build:ffi": "cd core && cargo build --release --features ffi --no-default-features",
+    "build:napi": "cd core && cargo build --release",
+    "build:lua": "cd core && cargo build --release --features lua --no-default-features",
+    "build:python": "cd core && cargo build --release --features python --no-default-features",
+    "debug:ffi": "cd core && cargo build --features ffi --no-default-features",
+    "debug:napi": "cd core && cargo build",
+    "debug:lua": "cd core && cargo build --features lua --no-default-features",
+    "debug:python": "cd core && cargo build --features python --no-default-features"
   },
   "devDependencies": {
     "@types/bun": "^1.3.3"
