--- a/bind/ts/tsconfig.json
+++ b/bind/ts/tsconfig.json
@@ -6,7 +6,7 @@
   ],
   "include": [
     "src/**/*.ts",
-    "src/napi/**/*.ts",
+    "src/ffi/**/*.dll",
     "src/napi/**/*.node",
   ],
   "compilerOptions": {
