Refactor module visibility and serialization order; add blit shader and rendering improvements
- Changed module visibility for `buffers`, `render`, and `result` to public in `mod.rs`.
- Adjusted serialization order for `ProfilingData`, `UniformType`, `UniformValue`, `UniformField`, `Viewport`, and various enums in `render` to improve clarity.
- Introduced a new blit shader for compositing render targets to the surface.
- Enhanced the `compose_pass` function to utilize the new blit shader and improved resource management.
- Added initialization for blit resources in `RenderState`.
- Implemented a main function to demonstrate triangle rendering with the new pipeline.
- Updated various structs and enums to ensure proper serialization and deserialization.

--- a/bind/ts/package.json
+++ b/bind/ts/package.json
@@ -32,6 +32,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "gl-matrix": "^3.4.4",
     "msgpackr": "^1.11.5"
   },
   "devDependencies": {
