--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,6 +9,7 @@ env_logger = "0.11"
 log = "0.4"
 pollster = "0.4"
 once_cell = "1.21"
+ctrlc = "3.4"
 
 # Serialization & Data Structures
 serde = { version = "1.0", features = ["derive"] }
@@ -40,6 +41,11 @@ napi-build = "2.3.1"
 [lib]
 crate-type = ["cdylib"]
 path = "src/lib.rs"
+
+[[bin]]
+name = "vulfram-demo"
+path = "src/main.rs"
+required-features = []
 
 [features]
 default = ["napi"]  # Default to N-API export
