--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_repr = "0.1"
 rmp-serde = "1.3.0"
 bytemuck = "1.24.0"
-glam = { version = "0.30.9", features = ["serde", "bytemuck"] }
+encase = "0.12.0"
+glam = { version = "0.30.9", features = ["serde", "bytemuck", "encase"] }
 
 # Graphics & Windowing
 wgpu = "27.0"
