--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ log = "0.4"
 pollster = "0.4"
 once_cell = "1.21"
 ctrlc = "3.4"
+smallvec = "1.15.1"
 
 # Serialization & Data Structures
 serde = { version = "1.0", features = ["derive"] }
