--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,19 +9,19 @@ env_logger = "0.11"
 log = "0.4"
 pollster = "0.4"
 once_cell = "1.21"
-ctrlc = "3.4"
-smallvec = "1.15.1"
+ctrlc = "3.5"
+smallvec = "1.15"
 
 # Serialization & Data Structures
 serde = { version = "1.0", features = ["derive"] }
 serde_repr = "0.1"
-rmp-serde = "1.3.0"
-bytemuck = "1.24.0"
-encase = "0.12.0"
-glam = { version = "0.30.9", features = ["serde", "bytemuck", "encase"] }
+rmp-serde = "1.3"
+bytemuck = "1.24"
+encase = "0.12"
+glam = { version = "0.30", features = ["serde", "bytemuck", "encase"] }
 
 # Graphics & Windowing
-wgpu = "27.0"
+wgpu = "28.0"
 winit = "0.30"
 gilrs = "0.11"
 
@@ -29,13 +29,13 @@ gilrs = "0.11"
 notifica = "3.0"
 
 # Image decoding
-image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "avif"] }
+image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg", "webp", "avif"] }
 
 # Binding dependencies (optional)
-napi = { version = "3.6", optional = true }
-napi-derive = { version = "3.4", optional = true }
-mlua = { version = "0.11.5", features = ["lua54", "module"], optional = true }
-pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
+napi = { version = "3.8", optional = true }
+napi-derive = { version = "3.5", optional = true }
+mlua = { version = "0.11", features = ["lua54", "module"], optional = true }
+pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
 
 [lib]
 crate-type = ["cdylib"]
