feat: implement notification system with interaction events
- Updated dependencies in Cargo.toml to use notify-rust for notifications.
- Added CmdNotificationSend command to send notifications and handle user interactions.
- Created new documentation for CmdNotificationSend detailing arguments and events.
- Implemented notification handling in the engine, including dispatching events for clicks and dismissals.
- Added SystemEvent variants for notification interactions.
- Created a new notification module to encapsulate notification logic.
- Added a test notification in the main function to verify functionality.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ winit = "0.30"
 gilrs = "0.11"
 
 # Notifications
-notifica = "3.0"
+notify-rust = "4.11"
 
 # Image decoding
 image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg", "webp", "avif"] }
