--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -45,13 +45,36 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libwayland-dev libx11-dev libxkbcommon-dev libasound2-dev libdbus-1-dev
+          sudo apt-get install -y pkg-config libwayland-dev libx11-dev libxkbcommon-dev libasound2-dev libdbus-1-dev libudev-dev libxcb-shape0-dev libxcb-xfixes0-dev
           if [ "${{ matrix.binding }}" == "lua" ]; then
             sudo apt-get install -y liblua5.4-dev
+          fi
+          if [ "${{ matrix.binding }}" == "python" ]; then
+            sudo apt-get install -y python3-dev
           fi
           if [ "${{ matrix.arch }}" == "arm64" ]; then
             sudo apt-get install -y gcc-aarch64-linux-gnu
           fi
+
+      - name: Install Dependencies (macOS)
+        if: matrix.os == 'macos-latest'
+        run: |
+          if [ "${{ matrix.binding }}" == "lua" ]; then
+            brew install lua
+          fi
+
+      - name: Setup Node.js (for N-API)
+        if: matrix.binding == 'napi'
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+
+      - name: Setup Python (for PyO3)
+        if: matrix.binding == 'python'
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          architecture: ${{ (matrix.arch == 'arm64' && 'arm64') || 'x64' }}
 
       - name: Build
         shell: bash
@@ -69,11 +92,8 @@ jobs:
 
           # Use cross for Linux ARM64 cross-compilation
           if [[ "${{ matrix.os }}" == "ubuntu-latest" && "${{ matrix.arch }}" == "arm64" ]]; then
-            cargo install cross --git https://github.com/cross-rs/cross
-            cross build --release --target $TARGET --no-default-features --features ${{ matrix.binding }}
-          else
-            # Set Python environment if needed for PyO3
-            if [ "${{ matrix.binding }}" == "python" ]; then
+            # Use pre-built cross binary to save time
+            curl -L https://github.com/cross-rs/cross/releases/latest/download/cross-x86_64-unknown-linux-musl.tar.gz | tar xz -C /usr/local/bin
               export PYO3_PRINT_CONFIG=1
             fi
             cargo build --release --target $TARGET --no-default-features --features ${{ matrix.binding }}
