--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -93,9 +93,9 @@ jobs:
           # Use cross for Linux ARM64 cross-compilation
           if [[ "${{ matrix.os }}" == "ubuntu-latest" && "${{ matrix.arch }}" == "arm64" ]]; then
             curl -L https://github.com/cross-rs/cross/releases/latest/download/cross-x86_64-unknown-linux-musl.tar.gz | tar xz -C /usr/local/bin
-            
-            # Ensure libudev-dev is available for some crates that need it
             export PKG_CONFIG_ALLOW_CROSS=1
+            # Link against the target's pkgconfig
+            export PKG_CONFIG_PATH_aarch64_unknown_linux_gnu=/usr/lib/aarch64-linux-gnu/pkgconfig
             cross build --release --target $TARGET --no-default-features --features ${{ matrix.binding }}
           else
             # Set Python environment if needed for PyO3
@@ -126,16 +126,11 @@ jobs:
           fi
 
           # Copy files
-          cp ${SEARCH_PATH}/*.${EXTENSION} dist/ 2>/dev/null || true
-          cp target/release/*.${EXTENSION} dist/ 2>/dev/null || true
+          cp ${SEARCH_PATH}/*.${EXTENSION} dist/ 2>/dev/null || cp target/release/*.${EXTENSION} dist/ 2>/dev/null || true
 
           # For N-API, rename to .node
           if [ "${{ matrix.binding }}" == "napi" ]; then
-            # Find the actual file (might be libvulfram_core.so or similar)
-            for f in dist/*.${EXTENSION}; do
-              [ -e "$f" ] || continue
-              mv "$f" dist/vulfram_core.node
-            done
+            find dist -name "*.${EXTENSION}" -exec mv {} dist/vulfram_core.node \;
           fi
 
       - name: Upload Artifact
