--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -90,17 +90,26 @@ jobs:
 
           echo "Building for target: $TARGET with feature: ${{ matrix.binding }}"
 
+          # Set Linker flags for macOS bindings
+          if [[ "${{ matrix.os }}" == "macos-latest" ]]; then
+            if [[ "${{ matrix.binding }}" == "python" || "${{ matrix.binding }}" == "lua" ]]; then
+              export RUSTFLAGS="-C link-arg=-undefined -C link-arg=dynamic_lookup"
+            fi
+          fi
+
           # Use cross for Linux ARM64 cross-compilation
           if [[ "${{ matrix.os }}" == "ubuntu-latest" && "${{ matrix.arch }}" == "arm64" ]]; then
             curl -L https://github.com/cross-rs/cross/releases/latest/download/cross-x86_64-unknown-linux-musl.tar.gz | tar xz -C /usr/local/bin
             
-            # Use a custom cross configuration to install libudev-dev inside the container
+            # Create Cross.toml with a newer image and correct dependency installation
             echo '[target.aarch64-unknown-linux-gnu]' > Cross.toml
-            echo 'pre-build = ["apt-get update && apt-get install -y libudev-dev:arm64"]' >> Cross.toml
+            echo 'image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:edge"' >> Cross.toml
+            echo 'pre-build = ["dpkg --add-architecture arm64 && apt-get update && apt-get install -y libudev-dev:arm64"]' >> Cross.toml
             
+            export PKG_CONFIG_ALLOW_CROSS=1
             cross build --release --target $TARGET --no-default-features --features ${{ matrix.binding }}
           else
-            # Build
+            # Normal build
             cargo build --release --target $TARGET --no-default-features --features ${{ matrix.binding }}
           fi
 
