--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ napi = { version = "3.8", optional = true }
 napi-derive = { version = "3.5", optional = true }
 mlua = { version = "0.11", features = ["lua54", "module"], optional = true }
 pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
+rand = "0.9.2"
 
 [lib]
 crate-type = ["cdylib"]
