--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,8 @@ glam = { version = "0.30", features = ["serde", "bytemuck", "encase"] }
 
 # Graphics & Windowing
 wgpu = "28.0"
-winit = "0.30"
-gilrs = "0.11"
+winit = { version = "0.30", optional = true }
+gilrs = { version = "0.11", optional = true }
 
 # Notifications
 notify-rust = "4.11"
@@ -37,6 +37,29 @@ napi-derive = { version = "3.5", optional = true }
 mlua = { version = "0.11", features = ["lua54", "module"], optional = true }
 pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
 rand = "0.9.2"
+wasm-bindgen = { version = "0.2", optional = true }
+wasm-bindgen-futures = { version = "0.4", optional = true }
+js-sys = { version = "0.3", optional = true }
+web-sys = { version = "0.3", optional = true, features = [
+    "Window",
+    "Document",
+    "Element",
+    "HtmlCanvasElement",
+    "DomRect",
+    "Event",
+    "EventTarget",
+    "KeyboardEvent",
+    "PointerEvent",
+    "WheelEvent",
+    "FocusEvent",
+    "TouchEvent",
+    "Touch",
+    "TouchList",
+    "MouseEvent",
+    "ResizeObserver",
+    "ResizeObserverEntry",
+    "Navigator",
+] }
 
 [lib]
 crate-type = ["cdylib"]
@@ -44,10 +67,11 @@ path = "src/lib.rs"
 
 [features]
 default = ["napi"]  # Default to N-API export
-ffi = []  # C ABI / FFI export
-napi = ["dep:napi", "dep:napi-derive"]  # N-API export
-lua = ["dep:mlua"]
-python = ["dep:pyo3"]
+ffi = ["dep:winit", "dep:gilrs"]  # C ABI / FFI export
+napi = ["dep:napi", "dep:napi-derive", "dep:winit", "dep:gilrs"]  # N-API export
+lua = ["dep:mlua", "dep:winit", "dep:gilrs"]
+python = ["dep:pyo3", "dep:winit", "dep:gilrs"]
+wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:web-sys"]
 
 [profile.dev]
 opt-level = 0
@@ -57,4 +81,3 @@ opt-level = 3
 lto = true
 codegen-units = 1
 strip = "symbols"
-
