feat: Add WASM platform support with gamepad processing and build workflow

--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -154,6 +154,33 @@ jobs:
           path: dist/*
           retention-days: 1
 
+  build-wasm:
+    name: Build wasm32-unknown-unknown
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: wasm32-unknown-unknown
+
+      - name: Build
+        run: cargo build --release --target wasm32-unknown-unknown --no-default-features --features wasm
+
+      - name: Prepare Artifact
+        shell: bash
+        run: |
+          mkdir -p dist/wasm
+          cp target/wasm32-unknown-unknown/release/*.wasm dist/wasm/ || true
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: vulfram-wasm
+          path: dist/wasm
+          retention-days: 1
+
   merge:
     name: Merge Artifacts - ${{ matrix.binding }}
     needs: build
