feat(platforms): implement browser and desktop platform proxies
- Added `BrowserProxy` for handling browser-specific platform functionality.
- Introduced `DesktopProxy` for managing desktop platform events and window creation.
- Created a unified `PlatformProxy` trait to abstract platform-specific implementations.
- Updated event handling and rendering methods to utilize the new platform proxies.
- Refactored window creation commands to support both browser and desktop environments.
- Enhanced gamepad processing and event pumping across platforms.
- Removed the `web` module as its functionality is now integrated into the new platform structure.

--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -165,6 +165,9 @@ jobs:
         with:
           targets: wasm32-unknown-unknown
 
+      - name: Install wasm-bindgen
+        run: cargo install wasm-bindgen-cli --version 0.2.106
+
       - name: Build
         run: cargo build --release --target wasm32-unknown-unknown --no-default-features --features wasm
 
@@ -173,6 +176,12 @@ jobs:
         run: |
           mkdir -p dist/wasm
           cp target/wasm32-unknown-unknown/release/*.wasm dist/wasm/ || true
+          mkdir -p dist/wasm/pkg
+          wasm-bindgen \
+            --target web \
+            --out-dir dist/wasm/pkg \
+            --out-name vulfram_core \
+            target/wasm32-unknown-unknown/release/vulfram_core.wasm
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
