feat(workflow): add branch creation triggers for releases, alphas, and betas

--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -11,6 +11,11 @@ on:
       - releases/**/*
       - alphas/**/*
       - betas/**/*
+  create:
+    branches:
+      - releases/**
+      - alphas/**
+      - betas/**
   workflow_dispatch:
 
 jobs:
