--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "vulfram-core"
 version = "0.5.6-alpha"
 edition = "2024"
+default-run = "vulfram-core"
 
 [dependencies]
 # Helpers
@@ -36,6 +37,7 @@ napi-derive = { version = "3.5", optional = true }
 mlua = { version = "0.11", features = ["lua54", "module"], optional = true }
 pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
 rand = "0.9.2"
+naga = { version = "28.0.0", features = ["wgsl-in"] }
 wasm-bindgen = { version = "0.2", optional = true }
 wasm-bindgen-futures = { version = "0.4", optional = true }
 js-sys = { version = "0.3", optional = true }
