--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,46 +1,54 @@
 [package]
 name = "vulfram-core"
-version = "0.6.5-alpha"
+version = "0.6.6-alpha"
 edition = "2024"
 default-run = "vulfram-core"
 
 [dependencies]
-# Helpers
+# Core helpers
 env_logger = "0.11"
 log = "0.4"
-pollster = "0.4"
 once_cell = "1.21"
-ctrlc = { version = "3.5", optional = true }
+pollster = "0.4"
 smallvec = "1.15"
 
-# Serialization & Data Structures
-serde = { version = "1.0", features = ["derive"] }
-rmp-serde = "1.3"
+# Data serialization & layouts
 bytemuck = "1.24"
 encase = "0.12"
+rmp-serde = "1.3"
+serde = { version = "1.0", features = ["derive"] }
+
+# Math
 glam = { version = "0.30", features = ["serde", "bytemuck", "encase"] }
 
-# Graphics & Windowing
+# Graphics & windowing
 wgpu = "28.0"
 winit = { version = "0.30", optional = true }
+
+# Input & signals
+ctrlc = { version = "3.5", optional = true }
 gilrs = { version = "0.11", optional = true }
 
 # Notifications
 notify-rust = { version = "4.11", optional = true }
 
-# Image decoding
+# Images
 image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg", "webp", "avif"] }
 
-# Binding dependencies (optional)
+# Tooling (WGSL validation)
+naga = { version = "28.0.0", features = ["wgsl-in"] }
+
+# Scripting / bindings (optional)
+mlua = { version = "0.11", features = ["lua54", "module"], optional = true }
 napi = { version = "3.8", optional = true }
 napi-derive = { version = "3.5", optional = true }
-mlua = { version = "0.11", features = ["lua54", "module"], optional = true }
 pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
 rand = "0.9.2"
-naga = { version = "28.0.0", features = ["wgsl-in"] }
+
+# Wasm
+js-sys = { version = "0.3", optional = true }
 wasm-bindgen = { version = "0.2", optional = true }
 wasm-bindgen-futures = { version = "0.4", optional = true }
-js-sys = { version = "0.3", optional = true }
 web-sys = { version = "0.3", optional = true, features = [
     "Window",
     "Document",
