feat: enhance image processing and rendering capabilities
- Updated `Cargo.toml` to include new image formats (EXR, HDR, ICO) and added `half` crate for half-precision float support.
- Expanded `TODO.md` with new optional features for future improvements, including custom materials and projective spot lights.
- Added new EXR skybox assets to the project.
- Enhanced `ImageBuffer` to support RGBA16F format and updated the image decoding logic to handle EXR and HDR formats.
- Implemented skybox rendering in the rendering pipeline, including new shaders and uniform structures for skybox parameters.
- Updated environment configuration to include new skybox settings (ground, horizon, and sky colors).
- Modified texture handling to support new image formats and updated the window icon setting to handle RGBA8 format.
- Refactored demo functions to utilize the new skybox features and improved camera handling.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,8 @@ gilrs = { version = "0.11", optional = true }
 notify-rust = { version = "4.11", optional = true }
 
 # Images
-image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg", "webp", "avif"] }
+image = { version = "0.25", default-features = false, features = ["bmp", "png", "jpeg", "webp", "avif", "exr", "hdr", "ico"] }
+half = "2.4"
 
 # Tooling (WGSL validation)
 naga = { version = "28.0.0", features = ["wgsl-in"] }
