--- a/.github/workflows/build-bindings.yml
+++ b/.github/workflows/build-bindings.yml
@@ -115,7 +115,7 @@ jobs:
             # Create Cross.toml with a newer image and correct dependency installation
             echo '[target.aarch64-unknown-linux-gnu]' > Cross.toml
             echo 'image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:edge"' >> Cross.toml
-            echo 'pre-build = ["dpkg --add-architecture arm64 && apt-get update && apt-get install -y libudev-dev:arm64"]' >> Cross.toml
+            echo 'pre-build = ["dpkg --add-architecture arm64 && apt-get update && apt-get install -y libudev-dev:arm64 libasound2-dev:arm64"]' >> Cross.toml
             
             export PKG_CONFIG_ALLOW_CROSS=1
             cross build --release --target $TARGET --no-default-features --features ${{ matrix.binding }}
